{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 0,
  "lineage": "d36f0df4-d25c-422e-4b00-d3b7c0ac95d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f27ad06e57fc00b",
            "arn": "arn:aws:ec2:us-east-2:339712694228:elastic-ip/eipalloc-08f27ad06e57fc00b",
            "domain": "vpc",
            "id": "eipalloc-08f27ad06e57fc00b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-74-101.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.74.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033fabdd332044f06",
            "arn": "arn:aws:ec2:us-east-2:339712694228:instance/i-04c64b70b4161af55",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c64b70b4161af55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f1ae7e5973db769",
            "private_dns": "ip-192-168-0-147.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f0c49066763a112",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010eda1bb95162777",
            "tags": {
              "Name": "server1"
            },
            "tags_all": {
              "Name": "server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc7161aecbfbe53"
            ]
          },
          "dependencies": [
            "aws_subnet.pvtsn1",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm13",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033fabdd332044f06",
            "arn": "arn:aws:ec2:us-east-2:339712694228:instance/i-015cf8ca45a6b300a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015cf8ca45a6b300a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f781c7d283a676ef",
            "private_dns": "ip-192-168-0-51.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.51",
            "public_ip": "3.12.152.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b42fdbc185b981b9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1bbba8395103c32",
            "tags": {
              "Name": "jumpserver1"
            },
            "tags_all": {
              "Name": "jumpserver1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc7161aecbfbe53"
            ]
          },
          "dependencies": [
            "aws_subnet.pubsn1",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:internet-gateway/igw-055e00b2fa67bcd52",
            "id": "igw-055e00b2fa67bcd52",
            "owner_id": "339712694228",
            "tags": {
              "Name": "IGW1"
            },
            "tags_all": {
              "Name": "IGW1"
            },
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "dependencies": [
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f27ad06e57fc00b",
            "association_id": "eipassoc-0a340e1200a8e9046",
            "connectivity_type": "public",
            "id": "nat-0a54999690eb96a49",
            "network_interface_id": "eni-0b5ae976bcd35d392",
            "private_ip": "192.168.0.24",
            "public_ip": "3.130.74.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a1bbba8395103c32",
            "tags": {
              "Name": "vpc-NAT"
            },
            "tags_all": {
              "Name": "vpc-NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.pubsn1",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PUBRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:route-table/rtb-006dcf367a02db56f",
            "id": "rtb-006dcf367a02db56f",
            "owner_id": "339712694228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055e00b2fa67bcd52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PUBRT"
            },
            "tags_all": {
              "Name": "PUBRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PVTRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:route-table/rtb-09b84456a332511a0",
            "id": "rtb-09b84456a332511a0",
            "owner_id": "339712694228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a54999690eb96a49",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PVTRT"
            },
            "tags_all": {
              "Name": "PVTRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.example",
            "aws_subnet.pubsn1",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PUBRTSNA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d70630ecd3e6e05",
            "route_table_id": "rtb-006dcf367a02db56f",
            "subnet_id": "subnet-0a1bbba8395103c32"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PUBRT",
            "aws_subnet.pubsn1",
            "aws_vpc.vm-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042c669ee154f0e4a",
            "route_table_id": "rtb-006dcf367a02db56f",
            "subnet_id": "subnet-0ac08e9a0bfca52d0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PUBRT",
            "aws_subnet.pubsn1",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PVTRTSNA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e083659b0cc707f7",
            "route_table_id": "rtb-09b84456a332511a0",
            "subnet_id": "subnet-010eda1bb95162777"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.example",
            "aws_route_table.PVTRT",
            "aws_subnet.pubsn1",
            "aws_subnet.pvtsn1",
            "aws_vpc.vm-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dafc1eff8df1df8b",
            "route_table_id": "rtb-09b84456a332511a0",
            "subnet_id": "subnet-0e75506c7400dc1d3"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.example",
            "aws_route_table.PVTRT",
            "aws_subnet.pubsn1",
            "aws_subnet.pvtsn1",
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:subnet/subnet-0a1bbba8395103c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1bbba8395103c32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712694228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBSN_1"
            },
            "tags_all": {
              "Name": "PUBSN_1"
            },
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "dependencies": [
            "aws_vpc.vm-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:subnet/subnet-0ac08e9a0bfca52d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac08e9a0bfca52d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712694228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBSN_2"
            },
            "tags_all": {
              "Name": "PUBSN_2"
            },
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "dependencies": [
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvtsn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:subnet/subnet-010eda1bb95162777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010eda1bb95162777",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712694228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PVTSN_1"
            },
            "tags_all": {
              "Name": "PVTSN_1"
            },
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "dependencies": [
            "aws_vpc.vm-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:subnet/subnet-0e75506c7400dc1d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e75506c7400dc1d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712694228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PVTSN_2"
            },
            "tags_all": {
              "Name": "PVTSN_2"
            },
            "vpc_id": "vpc-09e4484b575129d6e"
          },
          "dependencies": [
            "aws_vpc.vm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vm-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712694228:vpc/vpc-09e4484b575129d6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0a68d67041a6a293b",
            "default_route_table_id": "rtb-082c917871be85505",
            "default_security_group_id": "sg-07bc7161aecbfbe53",
            "dhcp_options_id": "dopt-017c1fa307f4cd713",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e4484b575129d6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082c917871be85505",
            "owner_id": "339712694228",
            "tags": {
              "Name": "vm-vpc"
            },
            "tags_all": {
              "Name": "vm-vpc"
            }
          }
        }
      ]
    }
  ]
}